--- a/ShelterEvidency/Views/StatisticsView.xaml
+++ b/ShelterEvidency/Views/StatisticsView.xaml
@@ -5,13 +5,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ShelterEvidency.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:helpers="clr-namespace:ShelterEvidency.Helpers"
              Background="{DynamicResource MaterialDesignPaper}"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         FontFamily="{DynamicResource MaterialDesignFont}"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1300">
 
-    <Grid Margin="5">
+    <UserControl.Resources>
+
+        <helpers:InvertBooleanConverter  x:Key="boolConvert"/>
+        <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
+
+
+    </UserControl.Resources>
+
+    <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -39,8 +48,8 @@
                         <ColumnDefinition Width="80"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBox x:Name="AnimalID" FontSize="14" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="ID zvířete" TextWrapping="Wrap" Margin="5" Padding="2"/>
-                    <Button x:Name="Search" Grid.Column="1" Margin="5" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
+                    <TextBox x:Name="SearchValue" FontSize="14" VerticalAlignment="Center" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="ID zvířete" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                    <Button x:Name="Search" IsEnabled="{Binding ValidSearchValue}" Grid.Column="1" Margin="5" Style="{StaticResource MaterialDesignFloatingActionMiniAccentButton}">
                         <materialDesign:PackIcon
                 Kind="Magnify"
                 Height="24"
@@ -55,7 +64,7 @@
                         
                     </Grid.RowDefinitions>
 
-                    <TextBlock x:Name="AnimalNAme" VerticalAlignment="Center" HorizontalAlignment="Center"
+                    <TextBlock x:Name="AnimalName" VerticalAlignment="Center" HorizontalAlignment="Center"
     Style="{StaticResource MaterialDesignHeadline6TextBlock}" FontSize="35" TextDecorations="Underline">
                     </TextBlock>
 
@@ -111,7 +120,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock VerticalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline5TextBlock}">
-                        Spotřeba krmiva
+                        Spotřeba krmiva (kg)
                                 </TextBlock>
                                 <TextBlock x:Name="AnimalFood" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline6TextBlock}">
@@ -149,7 +158,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock VerticalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline5TextBlock}">
-                        Spotřeba krmiva
+                        Počet incidentů
                                 </TextBlock>
                                 <TextBlock x:Name="AnimalIncidents" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline6TextBlock}">
@@ -168,7 +177,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock VerticalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline5TextBlock}">
-                        Počet zdravotních záznamů
+                        Zdravotních záznamů
                                 </TextBlock>
                                 <TextBlock x:Name="AnimalMedicalRecords" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline6TextBlock}">
@@ -225,7 +234,7 @@
                                 </Grid.ColumnDefinitions>
                                 <TextBlock VerticalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline5TextBlock}">
-                        Adotpován
+                        Adoptován
                                 </TextBlock>
                                 <TextBlock x:Name="AnimalAdopted" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
                             Style="{StaticResource MaterialDesignHeadline6TextBlock}">
@@ -285,11 +294,11 @@
         <materialDesign:Card Grid.Column="1" Margin="10"
     materialDesign:ShadowAssist.ShadowDepth="Depth1">
 
-            <Grid Grid.Column="1" Grid.RowSpan="2" Margin="10,20,10,10">
+            <Grid Grid.Column="1" Grid.RowSpan="2" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="45"/>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition/>
+                    <RowDefinition Height="1.5*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="10*"/>
                 </Grid.RowDefinitions>
 
                 <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center"
@@ -297,7 +306,7 @@
                   Všeobecné statistiky v daném období
                 </TextBlock>
 
-                <Grid Grid.Row="1">
+                <Grid Grid.Row="1" Margin="15,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -318,13 +327,238 @@
 
                 </Grid>
 
+                <StackPanel Grid.Row="2" Margin="50,75,50,0">
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Přijatých zvířat
+                            </TextBlock>
+                            <TextBlock x:Name="StatAnimals" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
 
 
-                
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Náklady
+                            </TextBlock>
+                            <TextBlock x:Name="StatCosts" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Sponzorské dary
+                            </TextBlock>
+                            <TextBlock x:Name="StatDonations" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Adoptovaných zvířat
+                            </TextBlock>
+                            <TextBlock x:Name="StatAdopted" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Z toho úspěšně
+                            </TextBlock>
+                            <TextBlock x:Name="StatNotReturned" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Úhynů
+                            </TextBlock>
+                            <TextBlock x:Name="StatDeaths" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Incidentů
+                            </TextBlock>
+                            <TextBlock x:Name="StatIncidents" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Zdravotních záznamů
+                            </TextBlock>
+                            <TextBlock x:Name="StatMedicalRecords" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Útěků
+                            </TextBlock>
+                            <TextBlock x:Name="StatEscapes" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Procházek
+                            </TextBlock>
+                            <TextBlock x:Name="StatWalks" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+
+                    <Border
+                        Padding="8"
+                        BorderThickness="0 0 0 1"
+                        BorderBrush="{DynamicResource MaterialDesignDivider}">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock VerticalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline5TextBlock}">
+                        Vrácených zvířat
+                            </TextBlock>
+                            <TextBlock x:Name="StatReturned" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center"
+                            Style="{StaticResource MaterialDesignHeadline6TextBlock}">
+                            </TextBlock>
+                        </Grid>
+                    </Border>
+
+                </StackPanel>
+
+
+
+
 
             </Grid>
 
         </materialDesign:Card>
+
+        <ProgressBar  
+              Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}, Mode=OneWay}"
+              Grid.RowSpan="2" Grid.ColumnSpan="3"
+              Style="{StaticResource MaterialDesignCircularProgressBar}"
+              Value="0"
+              Height="50"
+              Width="50"
+              IsIndeterminate="True" />
+
 
     </Grid>
     
