--- a/ShelterEvidency/Views/GeneralStaysView.xaml
+++ b/ShelterEvidency/Views/GeneralStaysView.xaml
@@ -22,7 +22,6 @@
     <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
         <materialDesign:Card Margin="10"
@@ -57,13 +56,15 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                         <ColumnDefinition Width="90"/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
                         <ColumnDefinition Width="90"/>
                     </Grid.ColumnDefinitions>
 
                     <DatePicker Margin="5" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=StaySince, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
                     <DatePicker Grid.Column="1" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=StayTo, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
 
-                    <Button x:Name="DeleteStay" IsEnabled="{Binding StayIsSelected}" Grid.Column="3"  Style="{StaticResource MaterialDesignIconForegroundButton}">
+                    <Button x:Name="DeleteStay" IsEnabled="{Binding StayIsSelected}" Grid.Column="5"  Style="{StaticResource MaterialDesignIconForegroundButton}">
                         <materialDesign:PackIcon
                 Kind="DeleteForever"
                 Height="24"
@@ -87,6 +88,8 @@
                         <DataGridTextColumn Header="ID" MaxWidth="50" Binding="{Binding ID}"/>
                         <DataGridTextColumn Header="Začátek" Binding="{Binding StartDate}"/>
                         <DataGridTextColumn Header="Konec" Binding="{Binding FinishDate}"/>
+                        <DataGridTextColumn Header="Datum nálezu" Binding="{Binding FindDate}"/>
+                        <DataGridTextColumn Header="Místo" Binding="{Binding FindPlace}"/>
                         <DataGridTextColumn Header="ID zvířete" Binding="{Binding AnimalID}"/>
                         <DataGridTextColumn Header="Jméno" Binding="{Binding AnimalName}"/>
                         <DataGridTextColumn Header="Dnů" Binding="{Binding DaysInShelter}"/>
@@ -139,77 +142,7 @@
 
         </materialDesign:Card>
 
-        <materialDesign:Card Margin="10" Grid.Column="1"
-    materialDesign:ShadowAssist.ShadowDepth="Depth1">
-
-            <Grid Margin="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition Height="80"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition Width="5*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <materialDesign:PackIcon Kind="RunFast" Opacity="0.3" Width="80" Height="80"  VerticalAlignment="Center"/>
-                    <TextBlock Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"
-                            Style="{StaticResource MaterialDesignHeadline4TextBlock}">
-                          Útěky z útulku
-                    </TextBlock>
-
-
-
-                </Grid>
-
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition Width="90"/>
-                        <ColumnDefinition Width="90"/>
-                    </Grid.ColumnDefinitions>
-
-                    <DatePicker Margin="5" materialDesign:HintAssist.Hint="Od data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=EscapeSince, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
-                    <DatePicker Grid.Column="1" Margin="5" materialDesign:HintAssist.Hint="Do data" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=EscapeTo, Mode=OneWayToSource,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
-
-                    <Button x:Name="DeleteEscape" IsEnabled="{Binding EscapeIsSelected}" Grid.Column="3"  Style="{StaticResource MaterialDesignIconForegroundButton}">
-                        <materialDesign:PackIcon
-                Kind="DeleteForever"
-                Height="24"
-                Width="24" />
-                    </Button>
-
-                    <Button Style="{StaticResource MaterialDesignFloatingActionAccentButton}"  Grid.Column="2"
-                x:Name="FilterEscapes" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,2,2" >
-                        <materialDesign:PackIcon
-                Kind="Update"
-                Height="30"
-                Width="30" />
-                    </Button>
-
-                </Grid>
-
-
-
-                <DataGrid Grid.Row="2" Margin="5" ColumnWidth="*" AutoGenerateColumns="False" VerticalContentAlignment="Center" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" IsReadOnly="True" SelectedValue="{Binding Path=SelectedEscape, Mode=OneWayToSource}" ItemsSource="{Binding Path=Escapes, Mode=OneWay}">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="ID" MaxWidth="50" Binding="{Binding ID}"/>
-                        <DataGridTextColumn Header="Datum" Binding="{Binding Date}"/>
-                        <DataGridTextColumn Header="ID zvířete" Binding="{Binding AnimalID}"/>
-                        <DataGridTextColumn Header="Jméno" Binding="{Binding AnimalName}"/>
-                        <DataGridTextColumn Header="Popis" Binding="{Binding Description}"/>
-                    </DataGrid.Columns>
-
-                </DataGrid>
-
-            </Grid>
-
-
-        </materialDesign:Card>
+        
 
         <ProgressBar  
               Visibility="{Binding IsWorking, Converter={StaticResource VisibleIfTrueConverter}, Mode=OneWay}"
