--- a/ShelterEvidency/Views/StaysView.xaml
+++ b/ShelterEvidency/Views/StaysView.xaml
@@ -20,7 +20,8 @@
 
     </UserControl.Resources>
 
-    <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
+    <Grid>
+        <Grid Margin="5" IsEnabled="{Binding IsWorking, Converter={StaticResource boolConvert}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
@@ -142,13 +143,24 @@
 
                 <Grid Grid.Row="1" Margin="15,0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="1.5*"/>
+                        <RowDefinition Height="1.5*"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <DatePicker Margin="5" materialDesign:HintAssist.Hint="Datum" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path= NewStayDate, Mode=TwoWay}" SelectedDateFormat="Long"/>
+                    <DatePicker Margin="5" materialDesign:HintAssist.Hint="Datum příjmu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path= NewStayDate, Mode=TwoWay}" SelectedDateFormat="Long"/>
+                    <Grid Grid.Row="1" Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="NewFindPlace" VerticalAlignment="Bottom" Style="{StaticResource MaterialDesignFloatingHintTextBox}"  materialDesign:HintAssist.Hint="Místo nálezu" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                        <DatePicker Grid.Column="1" Margin="5,5,0,5"  materialDesign:HintAssist.Hint="Datum nálezu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=NewFindDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
 
-                    <Button x:Name="CreateNewStay" IsEnabled="{Binding CanCreate}" Style="{StaticResource MaterialDesignRaisedAccentButton}" Width="100"  Grid.Row="1" Content="Vytvořit"/>
+
+                    </Grid>
+
+                    <Button x:Name="CreateNewStay" IsEnabled="{Binding CanCreate}" Style="{StaticResource MaterialDesignRaisedAccentButton}" Width="100"  Grid.Row="2" Content="Vytvořit"/>
                 </Grid>
 
             </Grid>
@@ -180,7 +192,7 @@
                         <RowDefinition/>
                         <RowDefinition/>
                         <RowDefinition/>
-                        <RowDefinition Height="70"/>
+                        <RowDefinition Height="1.2*"/>
                         <RowDefinition Height="1.3*"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
@@ -188,7 +200,18 @@
 
                     <DatePicker Grid.Row="1" Margin="5" materialDesign:HintAssist.Hint="Konec" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=Finish, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Long"/>
 
-                    <GroupBox Header="Zakončení pobytu" Grid.Row="2"  Grid.RowSpan="2" Style="{DynamicResource MaterialDesignGroupBox}"
+                    <Grid Grid.Row="2" Margin="5">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <TextBox x:Name="FindPlace" VerticalAlignment="Bottom" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding Path=FindPlace, Mode=TwoWay}"  materialDesign:HintAssist.Hint="Místo nálezu" TextWrapping="Wrap" Margin="5" Padding="2"/>
+                        <DatePicker Grid.Column="1" Margin="5,5,0,5"  materialDesign:HintAssist.Hint="Datum nálezu" Style="{StaticResource MaterialDesignOutlinedDatePicker}" SelectedDate="{Binding Path=FindDate, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}" SelectedDateFormat="Short"/>
+
+
+                    </Grid>
+
+                    <GroupBox Header="Zakončení pobytu" Grid.Row="3"  Style="{DynamicResource MaterialDesignGroupBox}"
                           materialDesign:ShadowAssist.ShadowDepth="Depth3"   BorderThickness="0" Margin="0,10,0,0">
                         <Grid Margin="5">
                             <Grid.ColumnDefinitions>
@@ -196,9 +219,9 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <CheckBox Content="adopce" HorizontalAlignment="Center" Grid.Column="0" IsChecked="{Binding Path = Adopted, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
-                            <CheckBox Content="útěk"  HorizontalAlignment="Center" Grid.Column="1" IsChecked="{Binding Path = Escaped, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
-                            <CheckBox Content="úmrtí"  HorizontalAlignment="Center" Grid.Column="2" IsChecked="{Binding Path = Died, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+                            <RadioButton Content="adopce" Style="{DynamicResource MaterialDesignAccentRadioButton}" HorizontalAlignment="Center" Grid.Column="0" IsChecked="{Binding Path = Adopted, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+                            <RadioButton Content="útěk" Style="{DynamicResource MaterialDesignAccentRadioButton}"  HorizontalAlignment="Center" Grid.Column="1" IsChecked="{Binding Path = Escaped, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+                            <RadioButton Content="úmrtí" Style="{DynamicResource MaterialDesignAccentRadioButton}"  HorizontalAlignment="Center" Grid.Column="2" IsChecked="{Binding Path = Died, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
                         </Grid>
                     </GroupBox>
 
@@ -220,10 +243,15 @@
               Width="50"
               IsIndeterminate="True" />
 
+        
+
+
 
 
     </Grid>
 
+    <ContentControl Grid.RowSpan="2" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Height="400" Width="450" x:Name="ActiveItem"/>
+    </Grid>
     <!--
     <Grid>
         <Grid.ColumnDefinitions>
